# softbuffer-rgb

./: Cargo.toml  LICENSE  README.md  generate_readme.py
benches/: bench.rs  colors
src/: lib.rs
tests/: hello_world  test.rs
